--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="edit_message">enter a message</string>
     <string name="button_send">Send</string>
     <string name="button_slider">access slider</string>
+    <string name="currentBarValue">current Value: 0</string>
 </resources>
