gave the slider button a better id, added button for dropdown, improved the string that is responsible for the slider value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="edit_message">enter a message</string>
     <string name="button_send">Send</string>
     <string name="button_slider">access slider</string>
-    <string name="currentBarValue">current Value: 0</string>
+    <string name="currentBarValue">move the slider</string>
+    <string name="button_dropdown">access dropdown</string>
 </resources>
